src/github.com/ebay/akutan/query/parser/testdata/select/errors/var_already_in_use.bql
SELECT (COUNT(*) as ?rims)
WHERE {
    ?rims rdf:type products:rims
}
